--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "axios": "^0.18.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
     "typescript": "^3.3.3333"
   },
   "scripts": {
